--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "http-status-codes": "^1.3.0",
+    "lodash": "^4.17.11",
     "moment-timezone": "^0.5.23",
+    "mongoose": "^5.4.20",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -34,7 +36,7 @@
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "sinon": "^7.2.6",
-    "supertest": "^3.4.2",
-    "sonarqube-scanner": "^2.4.0"
+    "sonarqube-scanner": "^2.4.0",
+    "supertest": "^3.4.2"
   }
 }
