--- a/server/package.json
+++ b/server/package.json
@@ -32,11 +32,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.3.0",
-    "jest": "^24.1.0",
     "nodemon": "^1.18.10",
-    "prettier": "^1.16.4",
-    "sinon": "^7.2.6",
-    "sonarqube-scanner": "^2.4.0",
-    "supertest": "^3.4.2"
+    "prettier": "^1.16.4"
   }
 }
